<resources>
    <string name="app_name">LooLah</string>
    <string name="splash_app_name">Loo Lah!</string>
    <string name="login_page">Login</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_toggle_password">Toggle Password Visibility</string>
    <string name="login_forgot_password">Forgot Password?</string>
    <string name="login_login_btn">Login</string>
    <string name="login_divider">OR</string>
    <string name="login_sign_up_btn">Sign Up</string>
    <string name="register_page">Register</string>
    <string name="register_email_hint">Email</string>
    <string name="register_username_hint">Username</string>
    <string name="register_password_hint">Password</string>
    <string name="register_toggle_password">Toggle Password Visibility</string>
    <string name="register_confirm_password_hint">Confirm Password</string>
    <string name="register_toggle_confirm_password">Toggle Confirm Password Visibility</string>
    <string name="register_register_btn">Register</string>
    <string name="register_account_exist">Already have an account? Login\u0020</string>
    <string name="register_account_exist_link"><u>here</u></string>
    <string name="navbar_home">Home</string>
    <string name="navbar_maps">Map</string>
    <string name="navbar_review">Add Review</string>
    <string name="navbar_favorites">Favorites</string>
    <string name="navbar_profile">Profile</string>
    <string name="home_search_hint">Search…</string>
    <string name="home_search_btn">Search</string>
    <string name="home_no_toilets">No toilets nearby</string>
    <string name="home_no_permission">Permission not allowed,\nunable to retrieve nearby toilets. </string>
    <string name="toilet_icon">Toilet Icon</string>
    <string name="toilet_verified">Verified</string>
    <string name="toilet_rating">Toilet Rating</string>
    <string name="toilet_distance" translatable="false">%sm</string>
    <string name="toilet_review_count" translatable="false">(%s)</string>
    <string name="toilet_details_background">Toilet Background</string>
    <string name="toilet_details_back_btn">Back</string>
    <string name="toilet_details_verified">Verified</string>
    <string name="toilet_details_rating">Toilet Rating</string>
    <string name="toilet_details_accessibility_true">Yes</string>
    <string name="toilet_details_accessibility_false">No</string>
    <string name="toilet_details_crowd_no_data">No Data</string>
    <string name="toilet_details_crowd_very">Very Crowded</string>
    <string name="toilet_details_crowd_crowded">Crowded</string>
    <string name="toilet_details_crowd_some">Some Crowd</string>
    <string name="toilet_details_crowd_not">Not Crowded</string>
    <string name="toilet_details_review">Reviews</string>
    <string name="toilet_details_review_count" translatable="false">(%s)</string>
    <string name="toilet_details_no_reviews">No reviews found</string>
    <string name="toilet_details_favorite_btn">Favorite</string>
    <string name="toilet_details_add_review_btn">Review</string>
    <string name="toilet_details_edit_review_btn">Edit Review</string>
    <string name="toilet_details_gallery_btn">Gallery</string>
    <string name="toilet_details_direction_btn">Direction</string>
    <string name="toilet_row_like_btn">Like Review</string>
    <string name="map_search_hint">Search…</string>
    <string name="toilet_gallery">Gallery</string>
    <string name="toilet_gallery_background">Toilet Background</string>
    <string name="toilet_gallery_back_btn">Back</string>
    <string name="toilet_gallery_verified">Verified</string>
    <string name="edit_review_save_btn">SAVE</string>
    <string name="add_review_post_btn">POST</string>
    <string name="edit_review_profile">Posting publicly</string>
    <string name="edit_review_username">\@%s</string>
    <string name="edit_review_upload_photos_btn">Upload Photos</string>
    <string name="edit_review_delete_btn">Delete</string>
    <string name="add_review_select_location_btn">Select Location</string>
    <string name="add_review_remove_location_btn">Remove Location</string>
    <string name="favorite_search_hint">Search…</string>
    <string name="favorite_search_btn">Search</string>
    <string name="favorite_no_toilets">No favorite toilets</string>
    <string name="toilet_favorite_icon">Toilet Icon</string>
    <string name="toilet_favorite_verified">Verified</string>
    <string name="toilet_favorite_favorited_btn">Favorited</string>
    <string name="profile_background">Profile Background</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="profile_username" translatable="false">\@%s</string>
    <string name="profile_rank">Profile Rank</string>
    <string name="profile_rank_gold">Veteran</string>
    <string name="profile_rank_silver">Apprentice</string>
    <string name="profile_rank_bronze">Novice</string>
    <string name="profile_rank_none">Member</string>
    <string name="profile_statistics_photos">Photos</string>
    <string name="profile_statistics_reviews">Reviews</string>
    <string name="profile_statistics_likes">Likes</string>
    <string name="profile_latest_reviews">Latest Reviews</string>
    <string name="profile_no_reviews">No reviews found</string>
    <string name="profile_review_toilet_verified">Verified</string>
    <string name="profile_review_toilet_rating">Toilet Rating</string>
    <string name="setting_background">Setting Background</string>
    <string name="setting_back_btn">Back</string>
    <string name="setting_edit_profile_btn">\tEdit Profile</string>
    <string name="setting_change_password_btn">\tChange Password</string>
    <string name="setting_sign_out_btn">Sign Out</string>
    <string name="change_password_background">Change Password Background</string>
    <string name="change_password_back_btn">Back</string>
    <string name="change_password_current">Current Password</string>
    <string name="change_password_new">New Password</string>
    <string name="change_password_confirm">Confirm Password</string>
    <string name="change_password_save_btn">Save</string>
    <string name="edit_profile_background">Edit Profile Background</string>
    <string name="edit_profile_back_btn">Back</string>
    <string name="edit_profile_username">Username</string>
    <string name="edit_profile_save_btn">Save</string>
    <string name="example_toilet_name">AMK Bus Interchange</string>
    <string name="example_toilet_distance">19.9m</string>
    <string name="example_toilet_type">Bus Interchange</string>
    <string name="example_toilet_district">Central</string>
    <string name="example_toilet_rating">4.5</string>
    <string name="example_toilet_rating_count">(4)</string>
    <string name="example_toilet_details_availability">Yes</string>
    <string name="example_toilet_details_address">53 Ang Mo Kio Avenue 3, S(569933)</string>
    <string name="example_toilet_details_crowd">Not Crowded</string>
    <string name="example_toilet_review_username">Test User 123</string>
    <string name="example_toilet_review_rating">5</string>
    <string name="example_toilet_review_comment">Here there everywhere i don\'t know what i doing anymore. This is a temporary review.</string>
    <string name="example_toilet_gallery_count">(5)</string>
    <string name="example_profile_username">\@example.123</string>
    <string name="example_profile_rank">Veteran</string>
    <string name="example_profile_statistics_photos">149</string>
    <string name="example_profile_statistics_reviews">149</string>
    <string name="example_profile_statistics_likes">149</string>
    <string name="example_profile_review_toilet_name">AMK Bus Interchange</string>
    <string name="example_profile_review_toilet_rating">5</string>
    <string name="example_profile_review_toilet_review">Fairly acceptable. A bit dirty but not the worst. Could be better.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_toilet_rvmenu">ToiletRVMenu</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>