<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_navbar_home"
        android:title="@string/navbar_home" />

    <item
        android:id="@+id/mapFragment"
        android:icon="@drawable/ic_navbar_maps"
        android:title="@string/navbar_maps" />

    <item
        android:id="@+id/reviewFragment"
        android:icon="@drawable/ic_navbar_review"
        android:title="@string/navbar_review" />

    <item
        android:id="@+id/favoritesFragment"
        android:icon="@drawable/ic_navbar_favorites"
        android:title="@string/navbar_favorites" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_navbar_profile"
        android:title="@string/navbar_profile" />
</menu>