<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_toilet_gallery_background"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/toilet_gallery_background"
        android:scaleType="centerCrop"
        android:src="@drawable/img_toilet_details"
        android:tintMode="src_atop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="#66000000" />

    <ImageButton
        android:id="@+id/ib_toilet_gallery_back"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/ic_arrow_back"
        android:contentDescription="@string/toilet_gallery_back_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_toilet_gallery_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/example_toilet_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="@id/iv_toilet_gallery_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_toilet_gallery_verified"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:contentDescription="@string/toilet_gallery_verified"
        android:src="@drawable/ic_toilet_verified"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:nestedScrollingEnabled="false"
        android:paddingHorizontal="20dp"
        android:paddingTop="15dp"
        android:paddingBottom="70dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_toilet_gallery_background">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ctl_toilet_gallery_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/lnl_toilet_gallery"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_toilet_gallery_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_pill"
                android:backgroundTint="@color/secondary"
                android:fontFamily="sans-serif-medium"
                android:paddingHorizontal="10dp"
                android:paddingVertical="2dp"
                android:text="@string/example_toilet_type"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:typeface="normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tv_toilet_gallery_district"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_toilet_gallery_district"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:background="@drawable/bg_pill"
                android:backgroundTint="@color/primary"
                android:fontFamily="sans-serif-medium"
                android:paddingHorizontal="10dp"
                android:paddingVertical="2dp"
                android:text="@string/example_toilet_district"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:typeface="normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_toilet_gallery_type"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/lnl_toilet_gallery_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_toilet_gallery_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/example_toilet_rating"
                    android:textColor="@color/muted"
                    android:textSize="12sp"
                    android:typeface="normal" />

                <ImageView
                    android:id="@+id/iv_toilet_gallery_rating"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginStart="2dp"
                    android:contentDescription="@string/toilet_rating"
                    android:src="@drawable/ic_toilet_rating"
                    app:tint="@color/muted" />

                <TextView
                    android:id="@+id/tv_toilet_gallery_rating_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/example_toilet_rating_count"
                    android:textColor="@color/muted"
                    android:textSize="12sp"
                    android:typeface="normal" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/lnl_toilet_gallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ctl_toilet_gallery_info">

            <TextView
                android:id="@+id/tv_toilet_gallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/toilet_gallery"
                android:textColor="@color/secondary"
                android:textSize="16sp"
                android:textStyle="bold"
                android:typeface="normal" />

            <TextView
                android:id="@+id/tv_toilet_gallery_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/example_toilet_gallery_count"
                android:textColor="@color/secondary"
                android:textSize="16sp"
                android:textStyle="bold"
                android:typeface="normal" />
        </LinearLayout>

        <!-- Gallery Grid (GridView) -->
        <GridView
            android:id="@+id/gv_toilet_gallery"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:horizontalSpacing="5dp"
            android:numColumns="3"
            android:stretchMode="columnWidth"
            android:verticalSpacing="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lnl_toilet_gallery" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/lnl_toilet_gallery_actions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/ib_toilet_gallery_favorite"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/bg_borderless"
            android:backgroundTint="@color/secondary"
            android:contentDescription="@string/toilet_details_favorite_btn"
            android:src="@drawable/ic_toilet_details_favorite" />

        <Button
            android:id="@+id/btn_toilet_gallery_review"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/bg_borderless"
            android:backgroundTint="@color/secondary"
            android:text="@string/toilet_details_review_btn"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:typeface="normal" />

        <ImageButton
            android:id="@+id/ib_toilet_gallery_gallery"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/bg_borderless"
            android:backgroundTint="@color/secondary"
            android:contentDescription="@string/toilet_details_gallery_btn"
            android:src="@drawable/ic_toilet_details_gallery" />

        <ImageButton
            android:id="@+id/ib_toilet_gallery_direction"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/bg_borderless"
            android:backgroundTint="@color/secondary"
            android:contentDescription="@string/toilet_details_direction_btn"
            android:src="@drawable/ic_toilet_details_direction" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>